Fix name overflow on mobile

--- a/style.css
+++ b/style.css
@@ -325,7 +325,7 @@ input[type="button"]:active {
 	}
 
 	.player-info {
-		width: auto;
+		width: 160px;
 		transform: scale(0.8);
 	}
 
